--- a/cart.html
+++ b/cart.html
@@ -214,14 +214,27 @@
     </table>
 
 
-    <!-- 
-    <div class="totalPrice">
-      <div class="flex-just-center cartBtnCont">
-        <button>Share Favorite List</button>
-        <a href="index.html"><button>Continue Shopping</button></a>
+    <div class="tprCotainer">
+      <div class="tprBox">
+
+        <div class="tprDiv">
+          <p>Subtotal:</p>
+          <b>20.00 €</b>
+        </div>
+        <div class="tprDiv">
+          <span>Shipping:</span>
+          <b>2.00 €</b>
+        </div>
+        <div class="tprDiv">
+          <h3>Totali:</h3>
+          <h4>2.00 €</h4>
+        </div>
+      </div>
+      <div class="tprBox">
+        <button>Share List</button>
+        <button>Continue Shopping</button>
       </div>
     </div>
-    -->
 
   </section>
 
