--- a/cart.html
+++ b/cart.html
@@ -230,9 +230,9 @@
           <h4>2.00 €</h4>
         </div>
       </div>
-      <div class="tprBox">
+      <div class="tprBox cartBtnCont">
         <button>Share List</button>
-        <button>Continue Shopping</button>
+        <a href="index.html">Continue Shopping</a>
       </div>
     </div>
 
