--- a/cart.html
+++ b/cart.html
@@ -33,7 +33,7 @@
 <body class="test2">
 
   <header class="cartHeader">
-    <img src="public/images/Logo.svg" alt="Main Logo Image">
+    <img src="/images/Logo.svg" alt="Main Logo Image">
   </header>
 
   <section class="cartSection">
@@ -235,6 +235,7 @@
         <a href="index.html">Continue Shopping</a>
       </div>
     </div>
+    
 
   </section>
 
