--- a/cart.html
+++ b/cart.html
@@ -214,27 +214,29 @@
     </table>
 
 
-    <div class="tprCotainer">
-      <div class="tprBox">
-
-        <div class="tprDiv">
-          <p>Subtotal:</p>
-          <b>20.00 €</b>
+    <section style="padding-bottom: 24px;">
+      <div class="tprCotainer">
+        <div class="tprBox">
+  
+          <div class="tprDiv">
+            <p>Subtotal:</p>
+            <b>20.00 €</b>
+          </div>
+          <div class="tprDiv">
+            <span>Shipping:</span>
+            <b>2.00 €</b>
+          </div>
+          <div class="tprDiv">
+            <h3>Totali:</h3>
+            <h4>2.00 €</h4>
+          </div>
         </div>
-        <div class="tprDiv">
-          <span>Shipping:</span>
-          <b>2.00 €</b>
-        </div>
-        <div class="tprDiv">
-          <h3>Totali:</h3>
-          <h4>2.00 €</h4>
+        <div class="tprBox cartBtnCont">
+          <button>Share List</button>
+          <a href="index.html">Continue Shopping</a>
         </div>
       </div>
-      <div class="tprBox cartBtnCont">
-        <button>Share List</button>
-        <a href="index.html">Continue Shopping</a>
-      </div>
-    </div>
+    </section>
     
 
   </section>
