--- a/cart.html
+++ b/cart.html
@@ -33,7 +33,8 @@
 <body class="test2">
 
   <header class="cartHeader">
-    <img src="/images/Logo.svg" alt="Main Logo Image">
+    <span class="material-symbols-outlined">shopping_cart</span>
+    <h3>Lista Produkteve</h3>
   </header>
 
   <section class="cartSection">
@@ -223,8 +224,8 @@
             <b>20.00 €</b>
           </div>
           <div class="tprDiv">
-            <span>Shipping:</span>
-            <b>2.00 €</b>
+            <span>Produktet:</span>
+            <b>25x</b>
           </div>
           <div class="tprDiv">
             <h3>Totali:</h3>
