--- a/cart.html
+++ b/cart.html
@@ -30,7 +30,7 @@
   * License: denis.cilesi.com
   ======================================================== -->
 </head>
-<body class="test2">
+<body>
 
   <header class="cartHeader">
     <span class="material-symbols-outlined">shopping_cart</span>
@@ -214,8 +214,9 @@
 
     </table>
 
+    <!-- Total Information and Share Button Section -->
 
-    <section style="padding-bottom: 34px;">
+    <div style="padding-bottom: 34px;">
       <div class="tprCotainer">
         <div class="tprBox">
   
@@ -237,7 +238,9 @@
           <a href="index.html">Continue Shopping</a>
         </div>
       </div>
-    </section>
+    </di>
+
+    <!-- End of  Total Information and Share Button Section -->
     
 
   </section>
