--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
       <tbody>
         <!-- Category Filter Name -->
         <tr>
-          <th>Drinks</th>
+          <th>Test1</th>
         </tr>
         <!-- End of Category Filter Name -->
 
@@ -688,7 +688,7 @@
             <tbody>
               <!-- Category Filter Name -->
               <tr>
-                <th>Drinks</th>
+                <th>test2</th>
               </tr>
               <!-- End of Category Filter Name -->
       
@@ -725,7 +725,7 @@
       <tbody>
         <!-- Category Filter Name -->
         <tr>
-          <th>Drinks</th>
+          <th>test3</th>
         </tr>
         <!-- End of Category Filter Name -->
 
