--- a/index.html
+++ b/index.html
@@ -538,10 +538,13 @@
       <span class="material-symbols-outlined">close</span>
     </div>
   </div>
-  <div class="modal-content-user">
+  <div class="modal-content-user product-form-container">
+    <img src="public/images/3.png" alt="">
 
+    <div class="product-form-group">
+      
 
-
+    </div>
 
     
 
