--- a/index.html
+++ b/index.html
@@ -544,25 +544,17 @@
       <h3>Greek Yogurt 10%</h3>
 
       <div class="space-btw">
-        <p>Njesia</p>
+        <p>Njesia:</p>
         <p>Cope</p>
       </div>
 
-      <div class="space-btw" style="justify-content: end;">
-        <div style="display: flex;align-items: center;">
-          <button class="quantity-btn lowCon">&#8722;</button>
-          <input type="number" class="quantity-input" value="1">
-          <button class="quantity-btn highCon">&#x2b;</button>
-        </div>
-      </div>
-
       <div class="space-btw">
-        <p>Qmimi</p>
+        <p>Qmimi:</p>
         <p>15.35$</p>
       </div>
 
       <div class="space-btw">
-        <p>Origjina</p>
+        <p>Origjina:</p>
         <p>Republic of Kosova</p>
       </div>
 
