--- a/index.html
+++ b/index.html
@@ -544,6 +544,11 @@
       <h3>Greek Yogurt 10%</h3>
 
       <div class="space-btw">
+        <p>Skadenca:</p>
+        <p>25/05/1989</p>
+      </div>
+
+      <div class="space-btw">
         <p>Njesia:</p>
         <p>Cope</p>
       </div>
@@ -556,6 +561,11 @@
       <div class="space-btw">
         <p>Origjina:</p>
         <p>Republic of Kosova</p>
+      </div>
+
+      <div class="space-btw">
+        <p>Linku Zbritjes:</p>
+        <p>#link</p>
       </div>
 
 
