--- a/index.html
+++ b/index.html
@@ -544,18 +544,13 @@
       <h3>Greek Yogurt 10%</h3>
 
       <div class="space-btw">
-        <p>Skadenca:</p>
+        <p>Oferta Vlen:</p>
         <p>25/05/1989</p>
       </div>
 
       <div class="space-btw">
         <p>Njesia:</p>
         <p>Cope</p>
-      </div>
-
-      <div class="space-btw">
-        <p>Qmimi:</p>
-        <p>15.35$</p>
       </div>
 
       <div class="space-btw">
@@ -566,6 +561,11 @@
       <div class="space-btw">
         <p>Linku Zbritjes:</p>
         <p>#link</p>
+      </div>
+
+      <div class="space-btw">
+        <p>Qmimi:</p>
+        <p>15.35$</p>
       </div>
 
 
