--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
 
       <div class="space-btw">
         <p>Linku Zbritjes:</p>
-        <p>#link</p>
+        <a href="#">Linku</a>
       </div>
 
       <div class="space-btw">
