--- a/index.html
+++ b/index.html
@@ -544,13 +544,18 @@
       <h3>Greek Yogurt 10%</h3>
 
       <div class="space-btw">
-        <p>Oferta Vlen:</p>
+        <p>Marketi:</p>
+        <p>Viva Fresh Store</p>
+      </div>
+
+      <div class="space-btw">
+        <p>Oferta Vlen Deri:</p>
         <p>25/05/1989</p>
       </div>
 
       <div class="space-btw">
         <p>Njesia:</p>
-        <p>Cope</p>
+        <p>400gr</p>
       </div>
 
       <div class="space-btw">
