--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 
     <!-- Google Fonts -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -527,7 +528,7 @@
 
 <!---------------- Modal Structures Section ---------------->
 
-<!-- Product Modal Styling TODO: -->
+<!-- Product Modal Styling -->
 
 <div id="modalBackdrop" class="modal-backdrop"></div>
 
@@ -695,78 +696,40 @@
     </div>
   </div>
   <div class="modal-content-admin">
-    <table class="FilterSection">
-      <!-- Complete Body for Category -->
-      <tbody>
-        <!-- Category Filter Name -->
-        <tr>
-          <th>Test1</th>
-        </tr>
-        <!-- End of Category Filter Name -->
-        <!-- Product Filter Content -->
-        <tr class="filter-Pcontent">
-          <td>Salad</td>
-          <td>25</td>
-        </tr>
-        <tr class="filter-Pcontent">
-          <td>Salad</td>
-          <td>25</td>
-        </tr>
-        <tr class="filter-Pcontent">
-          <td>Salad</td>
-          <td>25</td>
-        </tr>
-        <tr class="filter-Pcontent">
-          <td>Salad</td>
-          <td>25</td>
-        </tr>
-        <tr class="filter-Pcontent">
-          <td>Salad</td>
-          <td>25</td>
-        </tr>
-        <tr class="filter-Pcontent">
-          <td>Salad</td>
-          <td>25</td>
-        </tr>
-        <!-- End of Product Filter Content -->
-      </tbody>
-      <!-- End of  Complete Body for Category -->
-             <!-- Complete Body for Category -->
-      <tbody>
-        <!-- Category Filter Name -->
-        <tr>
-          <th>Test1</th>
-        </tr>
-        <!-- End of Category Filter Name -->
-        <!-- Product Filter Content -->
-        <tr class="filter-Pcontent">
-          <td>Salad</td>
-          <td>25</td>
-        </tr>
-        <tr class="filter-Pcontent">
-          <td>Salad</td>
-          <td>25</td>
-        </tr>
-        <tr class="filter-Pcontent">
-          <td>Salad</td>
-          <td>25</td>
-        </tr>
-        <tr class="filter-Pcontent">
-          <td>Salad</td>
-          <td>25</td>
-        </tr>
-        <tr class="filter-Pcontent">
-          <td>Salad</td>
-          <td>25</td>
-        </tr>
-        <tr class="filter-Pcontent">
-          <td>Salad</td>
-          <td>25</td>
-        </tr>
-        <!-- End of Product Filter Content -->
-      </tbody>
-      <!-- End of  Complete Body for Category -->
-    </table>
+    <!-- Chip Container -->
+    <div class="chip-container">
+      <div class="chip">Vaj ulliri</div>
+      <div class="chip">Soda Teshave</div>
+      <div class="chip">Mish Viqi</div>
+      <div class="chip">Majonez</div>
+      <div class="chip">Keqap</div>
+      <div class="chip">Butter</div>
+      <div class="chip">Vaj ulliri</div>
+      <div class="chip">Soda Teshave</div>
+      <div class="chip">Mish Viqi</div>
+      <div class="chip">Majonez</div>
+      <div class="chip">Keqap</div>
+      <div class="chip">Butter</div>
+      <div class="chip">Vaj ulliri</div>
+      <div class="chip">Soda Teshave</div>
+      <div class="chip">Mish Viqi</div>
+      <div class="chip">Majonez</div>
+      <div class="chip">Keqap</div>
+      <div class="chip">Butter</div>
+      <div class="chip">Vaj ulliri</div>
+      <div class="chip">Soda Teshave</div>
+      <div class="chip">Mish Viqi</div>
+      <div class="chip">Majonez</div>
+      <div class="chip">Keqap</div>
+      <div class="chip">Butter</div>
+      <div class="chip">Vaj ulliri</div>
+      <div class="chip">Soda Teshave</div>
+      <div class="chip">Mish Viqi</div>
+      <div class="chip">Majonez</div>
+      <div class="chip">Keqap</div>
+      <div class="chip">Butter</div>
+   </div>
+    <!-- End of  Chip Container -->
   </div>
   <div class="modal-buttons">
     <button>No</button>
@@ -926,6 +889,21 @@
   </script>
 
   <!-- End of  Quantity and Add to cart Button Script -->
+
+  <!-- Filter Chips Script -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+    const chips = document.querySelectorAll('.chip');
+
+    chips.forEach(chip => {
+      chip.addEventListener('click', function () {
+          this.classList.toggle('selected');
+          });
+      });
+  });
+
+    </script>
+  <!-- End of  Filter Chips Script -->
 
 
   <!-- Sendwich Menu Toggle Script -->
