--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             </div>
             <div class="product-info">
               <p>Deri me 25/05/1989</p>
-              <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
+              <h5>Olympus </h5>
               <div>
                 <span>€3.99</span>
                 <strike>9.20</strike>
@@ -465,7 +465,7 @@
             </div>
             <div class="product-info">
               <p>Deri me 25/05/1989</p>
-              <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
+              <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
               <div>
                 <span>€3.99</span>
                 <strike>9.20</strike>
