--- a/cart.html
+++ b/cart.html
@@ -33,12 +33,12 @@
 <body>
 
   <header class="cartHeader">
-    <span class="material-symbols-outlined">shopping_cart</span>
+    <a href="index.html"><span class="material-symbols-outlined btn-pad">arrow_back</span></a>
     <h3>Lista Produkteve</h3>
+    <span class="material-symbols-outlined btn-pad">delete</span>
   </header>
 
   <section class="cartSection">
-
     <table>
       <tbody>
         
@@ -235,7 +235,6 @@
         </div>
         <div class="tprBox cartBtnCont">
           <button>Share List</button>
-          <a href="index.html">Continue Shopping</a>
         </div>
       </div>
     </di>
