--- a/index.html
+++ b/index.html
@@ -550,6 +550,10 @@
         <p>Oferta Vlen Deri:</p>
         <p>25/05/1989</p>
       </div>
+      <div class="space-btw">
+        <p>Lokacioni:</p>
+        <p>Ferizaj</p>
+      </div>
 
       <div class="space-btw">
         <p>Njesia:</p>
