--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <!--  Header  -->
 
-    <header class="indexHeader">
+    <header>
       <div class="logoBox user-panel">
         <span style="color: white;">Ne Zbritje</span>
       </div>
