--- a/index.html
+++ b/index.html
@@ -633,9 +633,15 @@
           <input type="text" id="product-origin" name="product-origin" required>
         </div>
 
-        <div class="add-input-group">
-          <label for="product-expiry">Skadenca Ofertes</label>
-          <input type="date" id="product-expiry" name="product-expiry" required>
+        <div style="display: flex;flex-direction: row;column-gap: 20px;">
+          <div class="add-input-group">
+            <label for="product-expiry">Added Produkt</label>
+            <input type="date" id="product-expiry" name="product-expiry" required>
+          </div>
+          <div class="add-input-group">
+            <label for="product-expiry">Expires Produkt</label>
+            <input type="date" id="product-expiry" name="product-expiry" required>
+          </div>
         </div>
 
         <div class="add-input-group">
@@ -757,9 +763,15 @@
           <input type="text" id="product-origin" name="product-origin" required>
         </div>
 
-        <div class="add-input-group">
-          <label for="product-expiry">Skadenca Ofertes</label>
-          <input type="date" id="product-expiry" name="product-expiry" required>
+        <div style="display: flex;flex-direction: row;column-gap: 20px;">
+          <div class="add-input-group">
+            <label for="product-expiry">Added Produkt</label>
+            <input type="date" id="product-expiry" name="product-expiry" required>
+          </div>
+          <div class="add-input-group">
+            <label for="product-expiry">Expires Produkt</label>
+            <input type="date" id="product-expiry" name="product-expiry" required>
+          </div>
         </div>
 
         <div class="add-input-group">
@@ -879,9 +891,6 @@
     </div>
   </div>
   <div class="modal-content-admin">
-  
-
-    
   </div>
   <div class="modal-buttons">
     <button>No</button>
