--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
           <input type="text" id="product-origin" name="product-origin" required>
         </div>
 
-        <div style="display: flex;flex-direction: row;column-gap: 20px;">
+        <div style="display: flex;flex-direction: row;column-gap: 20px;justify-content: center;align-items: center;">
           <div class="add-input-group">
             <label for="product-expiry">Added Produkt</label>
             <input type="date" id="product-expiry" name="product-expiry" required>
