--- a/index.html
+++ b/index.html
@@ -1064,6 +1064,7 @@
 
   <!-- End of Sendwich Menu Toggle Script -->
 
+  <!-- Disable Double click to zoom script -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
     let lastTouchEnd = 0;
@@ -1078,6 +1079,8 @@
     });
 
   </script>
+
+  <!-- End of Disable Double click to zoom script -->
 
   <!-- Bottom Navigation Button Script -->
 
