--- a/cart.html
+++ b/cart.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Shopping Cart</title>
 
   
@@ -259,7 +259,23 @@
 
 
 
+  <!-- Disable Double click to zoom script -->
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+    let lastTouchEnd = 0;
 
+    document.addEventListener('touchend', function (event) {
+        let now = (new Date()).getTime();
+        if (now - lastTouchEnd <= 300) {
+            event.preventDefault();
+        }
+        lastTouchEnd = now;
+      }, false);
+    });
+
+  </script>
+
+  <!-- End of Disable Double click to zoom script -->
 
 
 
