--- a/pages/cart.html
+++ b/pages/cart.html
@@ -33,7 +33,7 @@
 <body>
 
   <header class="cartHeader">
-    <a href="index.html"><span class="material-symbols-outlined btn-pad">arrow_back</span></a>
+    <a href="/index.html"><span class="material-symbols-outlined btn-pad">arrow_back</span></a>
     <h3>Lista Produkteve</h3>
     <span class="material-symbols-outlined btn-pad">delete</span>
   </header>
