--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
     <!-- Main Section  -->
 
     <main>
-      <!-- Navigation Store Section  -->
+
+
+
+      <div>
+        <!-- Navigation Store Section  -->
       <section class="navSection">
         <div class="search-container">
           <input type="search" placeholder="Search Here...">
@@ -484,21 +488,29 @@
       </section>
       <!-- End of Main Product Section  -->
 
-      <!-- Footer Section -->
 
-      <footer>
-
-        
-      </footer>
-
-
-
-
-
-
+      </div>
 
 
     </main>
+
+    <footer>
+      <div class="payment-methods">
+        <p>Mënyrat e pagesës</p>
+        <div class="logos">
+          <img src="visa.png" alt="Visa" class="logo">
+          <img src="mastercard.png" alt="Mastercard" class="logo">
+        </div>
+      </div>
+      <div class="terms-privacy">
+        <a href="#">Termet dhe Kushtet</a>
+        <span>|</span>
+        <a href="#">Politikat e Privatesis</a>
+      </div>
+      <div class="copyright">
+        <p>Copyright © Ne Zbritje 2024</p>
+      </div>
+    </footer>
 
     <!-- End of Main Section  -->
 
