--- a/index.html
+++ b/index.html
@@ -486,21 +486,12 @@
           </div>
         </div>
       </section>
-      <!-- End of Main Product Section  -->
-
-
       </div>
-
-
     </main>
 
     <footer>
-      <div class="payment-methods">
-        <p>Mënyrat e pagesës</p>
-        <div class="logos">
-          <img src="visa.png" alt="Visa" class="logo">
-          <img src="mastercard.png" alt="Mastercard" class="logo">
-        </div>
+      <div class="logoContainer">
+        <a href="index.html"><img src="public/images/NeZbritjeLogo.svg" alt="Visa" class="logo"></a>
       </div>
       <div class="terms-privacy">
         <a href="#">Termet dhe Kushtet</a>
@@ -508,7 +499,7 @@
         <a href="#">Politikat e Privatesis</a>
       </div>
       <div class="copyright">
-        <p>Copyright © Ne Zbritje 2024</p>
+        <p>Copyright © NeZbritje 2024</p>
       </div>
     </footer>
 
