--- a/index.html
+++ b/index.html
@@ -166,325 +166,6 @@
           </div>
         </div>
 
-        <div class="product-card">
-          <div class="open-modal-btn" data-target="#modal1">
-            <div class="prod-img-box">
-              <img class="originFlag" src="/icons/greece.png" alt="Origin Flag Icon">
-              <img class="productImage" src="/images/1.png" alt="Proudct Image">
-              <div class="discount-label">-14%</div>
-              <!-- Admin Edit Button -->
-              <div>
-                <button class="admin-panel admin-nav-btn deleteBtn open-modal-btn" data-target="#modal3"><span class="material-symbols-outlined">delete</span></button>
-                <button class="admin-panel admin-nav-btn editBtn open-modal-btn" data-target="#modal2"><span class="material-symbols-outlined">edit</span></button>
-              </div>
-              <!-- End -->
-            </div>
-            <div class="product-info">
-              <p>Deri me 25/05/1989</p>
-              <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
-              <div>
-                <span>€3.99</span>
-                <strike>9.20</strike>
-              </div>
-            </div>
-          </div>
-          <div class="cart-button">
-            <button class="cart-btn">Add to Cart</button>
-            <div class="quantity-controls">
-              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-              <input type="number" class="quantity-input" value="1" readonly>
-              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-            </div>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <div class="open-modal-btn" data-target="#modal1">
-            <div class="prod-img-box">
-              <img class="originFlag" src="/icons/greece.png" alt="Origin Flag Icon">
-              <img class="productImage" src="/images/2.png" alt="Proudct Image">
-              <div class="discount-label">-14%</div>
-              <!-- Admin Edit Button -->
-              <div>
-                <button class="admin-panel admin-nav-btn deleteBtn open-modal-btn" data-target="#modal3"><span class="material-symbols-outlined">delete</span></button>
-                <button class="admin-panel admin-nav-btn editBtn open-modal-btn" data-target="#modal2"><span class="material-symbols-outlined">edit</span></button>
-              </div>
-              <!-- End -->
-            </div>
-            <div class="product-info">
-              <p>Deri me 25/05/1989</p>
-              <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
-              <div>
-                <span>€3.99</span>
-                <strike>9.20</strike>
-              </div>
-            </div>
-          </div>
-          <div class="cart-button">
-            <button class="cart-btn">Add to Cart</button>
-            <div class="quantity-controls">
-              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-              <input type="number" class="quantity-input" value="1" readonly>
-              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-            </div>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <div class="open-modal-btn" data-target="#modal1">
-            <div class="prod-img-box">
-              <img class="originFlag" src="/icons/greece.png" alt="Origin Flag Icon">
-              <img class="productImage" src="/images/3.png" alt="Proudct Image">
-              <div class="discount-label">-14%</div>
-              <!-- Admin Edit Button -->
-              <div>
-                <button class="admin-panel admin-nav-btn deleteBtn open-modal-btn" data-target="#modal3"><span class="material-symbols-outlined">delete</span></button>
-                <button class="admin-panel admin-nav-btn editBtn open-modal-btn" data-target="#modal2"><span class="material-symbols-outlined">edit</span></button>
-              </div>
-              <!-- End -->
-            </div>
-            <div class="product-info">
-              <p>Deri me 25/05/1989</p>
-              <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
-              <div>
-                <span>€3.99</span>
-                <strike>9.20</strike>
-              </div>
-            </div>
-          </div>
-          <div class="cart-button">
-            <button class="cart-btn">Add to Cart</button>
-            <div class="quantity-controls">
-              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-              <input type="number" class="quantity-input" value="1" readonly>
-              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-            </div>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <div class="open-modal-btn" data-target="#modal1">
-            <div class="prod-img-box">
-              <img class="originFlag" src="/icons/greece.png" alt="Origin Flag Icon">
-              <img class="productImage" src="/images/4.png" alt="Proudct Image">
-              <div class="discount-label">-14%</div>
-              <!-- Admin Edit Button -->
-              <div>
-                <button class="admin-panel admin-nav-btn deleteBtn open-modal-btn" data-target="#modal3"><span class="material-symbols-outlined">delete</span></button>
-                <button class="admin-panel admin-nav-btn editBtn open-modal-btn" data-target="#modal2"><span class="material-symbols-outlined">edit</span></button>
-              </div>
-              <!-- End -->
-            </div>
-            <div class="product-info">
-              <p>Deri me 25/05/1989</p>
-              <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
-              <div>
-                <span>€3.99</span>
-                <strike>9.20</strike>
-              </div>
-            </div>
-          </div>
-          <div class="cart-button">
-            <button class="cart-btn">Add to Cart</button>
-            <div class="quantity-controls">
-              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-              <input type="number" class="quantity-input" value="1" readonly>
-              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-            </div>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <div class="open-modal-btn" data-target="#modal1">
-            <div class="prod-img-box">
-              <img class="originFlag" src="/icons/greece.png" alt="Origin Flag Icon">
-              <img class="productImage" src="/images/5.png" alt="Proudct Image">
-              <div class="discount-label">-14%</div>
-              <!-- Admin Edit Button -->
-              <div>
-                <button class="admin-panel admin-nav-btn deleteBtn open-modal-btn" data-target="#modal3"><span class="material-symbols-outlined">delete</span></button>
-                <button class="admin-panel admin-nav-btn editBtn open-modal-btn" data-target="#modal2"><span class="material-symbols-outlined">edit</span></button>
-              </div>
-              <!-- End -->
-            </div>
-            <div class="product-info">
-              <p>Deri me 25/05/1989</p>
-              <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
-              <div>
-                <span>€3.99</span>
-                <strike>9.20</strike>
-              </div>
-            </div>
-          </div>
-          <div class="cart-button">
-            <button class="cart-btn">Add to Cart</button>
-            <div class="quantity-controls">
-              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-              <input type="number" class="quantity-input" value="1" readonly>
-              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-            </div>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <div class="open-modal-btn" data-target="#modal1">
-            <div class="prod-img-box">
-              <img class="originFlag" src="/icons/greece.png" alt="Origin Flag Icon">
-              <img class="productImage" src="/images/6.png" alt="Proudct Image">
-              <div class="discount-label">-14%</div>
-              <!-- Admin Edit Button -->
-              <div>
-                <button class="admin-panel admin-nav-btn deleteBtn open-modal-btn" data-target="#modal3"><span class="material-symbols-outlined">delete</span></button>
-                <button class="admin-panel admin-nav-btn editBtn open-modal-btn" data-target="#modal2"><span class="material-symbols-outlined">edit</span></button>
-              </div>
-              <!-- End -->
-            </div>
-            <div class="product-info">
-              <p>Deri me 25/05/1989</p>
-              <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
-              <div>
-                <span>€3.99</span>
-                <strike>9.20</strike>
-              </div>
-            </div>
-          </div>
-          <div class="cart-button">
-            <button class="cart-btn">Add to Cart</button>
-            <div class="quantity-controls">
-              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-              <input type="number" class="quantity-input" value="1" readonly>
-              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-            </div>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <div class="open-modal-btn" data-target="#modal1">
-            <div class="prod-img-box">
-              <img class="originFlag" src="/icons/greece.png" alt="Origin Flag Icon">
-              <img class="productImage" src="/images/3.png" alt="Proudct Image">
-              <div class="discount-label">-14%</div>
-              <!-- Admin Edit Button -->
-              <div>
-                <button class="admin-panel admin-nav-btn deleteBtn open-modal-btn" data-target="#modal3"><span class="material-symbols-outlined">delete</span></button>
-                <button class="admin-panel admin-nav-btn editBtn open-modal-btn" data-target="#modal2"><span class="material-symbols-outlined">edit</span></button>
-              </div>
-              <!-- End -->
-            </div>
-            <div class="product-info">
-              <p>Deri me 25/05/1989</p>
-              <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
-              <div>
-                <span>€3.99</span>
-                <strike>9.20</strike>
-              </div>
-            </div>
-          </div>
-          <div class="cart-button">
-            <button class="cart-btn">Add to Cart</button>
-            <div class="quantity-controls">
-              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-              <input type="number" class="quantity-input" value="1" readonly>
-              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-            </div>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <div class="open-modal-btn" data-target="#modal1">
-            <div class="prod-img-box">
-              <img class="originFlag" src="/icons/greece.png" alt="Origin Flag Icon">
-              <img class="productImage" src="/images/3.png" alt="Proudct Image">
-              <div class="discount-label">-14%</div>
-              <!-- Admin Edit Button -->
-              <div>
-                <button class="admin-panel admin-nav-btn deleteBtn open-modal-btn" data-target="#modal3"><span class="material-symbols-outlined">delete</span></button>
-                <button class="admin-panel admin-nav-btn editBtn open-modal-btn" data-target="#modal2"><span class="material-symbols-outlined">edit</span></button>
-              </div>
-              <!-- End -->
-            </div>
-            <div class="product-info">
-              <p>Deri me 25/05/1989</p>
-              <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
-              <div>
-                <span>€3.99</span>
-                <strike>9.20</strike>
-              </div>
-            </div>
-          </div>
-          <div class="cart-button">
-            <button class="cart-btn">Add to Cart</button>
-            <div class="quantity-controls">
-              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-              <input type="number" class="quantity-input" value="1" readonly>
-              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-            </div>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <div class="open-modal-btn" data-target="#modal1">
-            <div class="prod-img-box">
-              <img class="originFlag" src="/icons/greece.png" alt="Origin Flag Icon">
-              <img class="productImage" src="/images/1.png" alt="Proudct Image">
-              <div class="discount-label">-14%</div>
-              <!-- Admin Edit Button -->
-              <div>
-                <button class="admin-panel admin-nav-btn deleteBtn open-modal-btn" data-target="#modal3"><span class="material-symbols-outlined">delete</span></button>
-                <button class="admin-panel admin-nav-btn editBtn open-modal-btn" data-target="#modal2"><span class="material-symbols-outlined">edit</span></button>
-              </div>
-              <!-- End -->
-            </div>
-            <div class="product-info">
-              <p>Deri me 25/05/1989</p>
-              <h5>Olympus </h5>
-              <div>
-                <span>€3.99</span>
-                <strike>9.20</strike>
-              </div>
-            </div>
-          </div>
-          <div class="cart-button">
-            <button class="cart-btn">Add to Cart</button>
-            <div class="quantity-controls">
-              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-              <input type="number" class="quantity-input" value="1" readonly>
-              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-            </div>
-          </div>
-        </div>
-
-        <div class="product-card">
-          <div class="open-modal-btn" data-target="#modal1">
-            <div class="prod-img-box">
-              <img class="originFlag" src="/icons/greece.png" alt="Origin Flag Icon">
-              <img class="productImage" src="/images/6.png" alt="Proudct Image">
-              <div class="discount-label">-14%</div>
-              <!-- Admin Edit Button -->
-              <div>
-                <button class="admin-panel admin-nav-btn deleteBtn open-modal-btn" data-target="#modal3"><span class="material-symbols-outlined">delete</span></button>
-                <button class="admin-panel admin-nav-btn editBtn open-modal-btn" data-target="#modal2"><span class="material-symbols-outlined">edit</span></button>
-              </div>
-              <!-- End -->
-            </div>
-            <div class="product-info">
-              <p>Deri me 25/05/1989</p>
-              <h5>Olympus Jogurt Grek 0% Yndyrë 12/150gr Olympus Jogurt Grek 0% Yndyrë 12/150gr</h5>
-              <div>
-                <span>€3.99</span>
-                <strike>9.20</strike>
-              </div>
-            </div>
-          </div>
-          <div class="cart-button">
-            <button class="cart-btn">Add to Cart</button>
-            <div class="quantity-controls">
-              <button class="quantity-btn lowCon"><span class="material-symbols-outlined">remove</span></button>
-              <input type="number" class="quantity-input" value="1" readonly>
-              <button class="quantity-btn highCon"><span class="material-symbols-outlined">add</span></button>
-            </div>
-          </div>
-        </div>
       </section>
       </div>
     </main>
@@ -959,19 +640,43 @@
         const addToCartBtn = parent.querySelector('.cart-btn');
         const quantityControls = parent.querySelector('.quantity-controls');
 
+        let currentValue = parseInt(quantityInput.value) || 1; // Default to 1 if value is not a number
+
         if (btn.classList.contains('highCon')) {
-          quantityInput.value = parseInt(quantityInput.value) + 1;
+          currentValue++;
         } else {
-          if (quantityInput.value > 1) {
-            quantityInput.value = parseInt(quantityInput.value) - 1;
+          if (currentValue > 1) {
+            currentValue--;
           } else {
             addToCartBtn.style.display = 'block';
             quantityControls.style.display = 'none';
           }
         }
+
+        quantityInput.value = currentValue;
+      });
+    });
+
+    // Prevent non-numeric input and freezing with optimized input handling
+    const quantityInputs = document.querySelectorAll('.quantity-input');
+    quantityInputs.forEach(input => {
+      input.addEventListener('input', function(event) {
+        const value = event.target.value;
+
+        // Ensure only valid numbers are allowed
+        if (!/^\d+$/.test(value)) {
+          event.target.value = value.replace(/[^\d]/g, ''); // Remove any non-numeric characters
+          return;
+        }
+
+        // Limit the maximum number input (e.g., set a max of 99)
+        if (parseInt(value) > 99) {
+          event.target.value = 99;
+        }
       });
     });
   </script>
+
 
   <!-- End of  Quantity and Add to cart Button Script -->
 
