--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
           </div>
         </div>
       </div>
-      <div id="buttonsContainer" class="admin-panel">
-        <button class="open-modal-btn" data-target="#modal14">Settings</button>
-        <button class="open-modal-btn" data-target="#modal11">Logout</button>
-      </div>
+
     </header>
 
     <!-- End of Header  -->
@@ -146,15 +143,13 @@
               <img class="originFlag" src="/icons/greece.png" alt="Origin Flag Icon">
               <img class="productImage" src="/images/1.png" alt="Proudct Image">
               <div class="discount-label">-14%</div>
-              <!-- Admin Edit Button -->
               <div class="dropdown productEditDp">
                 <button class="admin-panel dropdown-button productDropBtn"><span class="material-symbols-outlined">more_horiz</span></button>
                 <div class="dropdown-content">
-                  <button class="dropdown-option">Option 1</button>
-                  <button class="dropdown-option">Login</button>
+                  <button class="dropdown-option open-modal-btn" data-target="#modal2">Edit</button>
+                  <button class="dropdown-option open-modal-btn" data-target="#modal3">Delete</button>
                 </div>
               </div>
-              <!-- End -->
             </div>
             <div class="product-info">
               <p>Deri me 25/05/1989</p>
