--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="dropdown">
           <button class="dropdown-button HeaderButtonDp"><span class="material-symbols-outlined admin-panel footer-icon btn-pad">account_circle</span></button>
           <div class="dropdown-content headerProfile">
-            <button class="dropdown-option">Option 1</button>
+            <button class="dropdown-option">Settings</button>
             <button class="dropdown-option open-modal-btn" data-target="#modal9">Login</button>
           </div>
         </div>
@@ -144,7 +144,7 @@
               <img class="productImage" src="/images/1.png" alt="Proudct Image">
               <div class="discount-label">-14%</div>
               <div class="dropdown productEditDp">
-                <button class="admin-panel dropdown-button productDropBtn"><span class="material-symbols-outlined">more_horiz</span></button>
+                <button class="dropdown-button admin-panel productDropBtn"><span class="material-symbols-outlined">more_horiz</span></button>
                 <div class="dropdown-content">
                   <button class="dropdown-option open-modal-btn" data-target="#modal2">Edit</button>
                   <button class="dropdown-option open-modal-btn" data-target="#modal3">Delete</button>
