--- a/index.html
+++ b/index.html
@@ -74,61 +74,24 @@
       <!-- Profile Store Section TODO: me ndryshu ne ul-li  -->
       
       <section class="cat-wrap">
+        <button class="all-fBtn">Gjitha</button>
         <div class="cat-container">
           <div class="cat-profile">
-            <img src="/images/emona.jpg" alt="">
+            <img src="public/images/emona.jpg" alt="">
           </div>
           <div class="cat-profile">
             <img src="/images/etc.png" alt="">
           </div>
           <div class="cat-profile">
-            <img src="/images/meridian.jpg" alt="">
+            <img src="public/images/meridian.jpg" alt="">
           </div>
           <div class="cat-profile">
-            <img src="/images/spar kosova.jpg" alt="">
+            <img src="public/images/spar kosova.jpg" alt="">
           </div>
           <div class="cat-profile">
-            <img src="/images/viva fresh.jpg" alt="">
+            <img src="public/images/viva fresh.jpg" alt="">
           </div>
-          <div class="cat-profile">
-            <img src="/images/emona.jpg" alt="">
-          </div>
-          <div class="cat-profile">
-            <img src="/images/etc.png" alt="">
-          </div>
-          <div class="cat-profile">
-            <img src="/images/meridian.jpg" alt="">
-          </div>
-          <div class="cat-profile">
-            <img src="/images/spar kosova.jpg" alt="">
-          </div>
-          <div class="cat-profile">
-            <img src="/images/viva fresh.jpg" alt="">
-          </div>
-          <div class="cat-profile">
-            <img src="/images/etc.png" alt="">
-          </div>
-          <div class="cat-profile">
-            <img src="/images/meridian.jpg" alt="">
-          </div>
-          <div class="cat-profile">
-            <img src="/images/spar kosova.jpg" alt="">
-          </div>
-          <div class="cat-profile">
-            <img src="/images/viva fresh.jpg" alt="">
-          </div>
-          <div class="cat-profile">
-            <img src="/images/etc.png" alt="">
-          </div>
-          <div class="cat-profile">
-            <img src="/images/meridian.jpg" alt="">
-          </div>
-          <div class="cat-profile">
-            <img src="/images/spar kosova.jpg" alt="">
-          </div>
-          <div class="cat-profile">
-            <img src="/images/viva fresh.jpg" alt="">
-          </div>
+
         </div>
       </section>
 
